[package]
name = "db-bench"
version = "0.1.0"
edition = "2021"

[dependencies]
rocksdb = "0.22"
sled = "0.34"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
rand = "0.8"
chrono = "0.4"
indicatif = "0.17"
hdrhistogram = "7.5"
tokio = { version = "1.40", features = ["full"] }
tempfile = "3.10"